# haskell-class-2022

./: .pre-commit-config.yaml  Makefile  README.md  haskell-class.cabal  package.yaml  pyproject.toml
containers/: Dockerfile
src/: Homework1.hs
test/: Homework1Test.hs
